Source/WebKit2/UIProcess/ios/PageClientImplIOS.h
@@ -33,6 +33,7 @@
 #import <wtf/RetainPtr.h>
 
 OBJC_CLASS WKContentView;
+OBJC_CLASS WKView;
 OBJC_CLASS WKWebView;
 OBJC_CLASS WKEditorUndoTargetObjC;
 
@@ -45,6 +46,7 @@ class PageClientImpl : public PageClient
     {
 public:
     PageClientImpl(WKContentView *, WKWebView *);
+    PageClientImpl(WKContentView *, WKView *);
     virtual ~PageClientImpl();
     
 private:
@@ -179,6 +181,7 @@ private:
 
     WKContentView *m_contentView;
     WKWebView *m_webView;
+    WKView *m_wkView;
     RetainPtr<WKEditorUndoTargetObjC> m_undoTarget;
 };
 } // namespace WebKit
